--- a/styles/about.scss
+++ b/styles/about.scss
@@ -55,16 +55,21 @@ header {
         }
 
         .hero_info_area {
-            margin-top: 2rem;
-            width: 60%;
-
-            h1.hero_title {
-                font-size: $heading_3;
-                line-height: 3.5rem;
+            margin-top: 3rem;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            .grid_col_span_2 {
+                grid-column: span 2;
             }
+            .hero_about_area {
+                h1.hero_title {
+                    font-size: $heading_3;
+                    line-height: 3.5rem;
+                }
 
-            p.hero_section_bio {
-                margin-top: 1rem;
+                p.hero_section_bio {
+                    margin-top: 1rem;
+                }
             }
         }
     }
@@ -92,7 +97,12 @@ main {
 
             .hero_info_area {
                 margin-top: 2rem;
-                width: 100%;
+                grid-template-columns: repeat(1, 1fr);
+                .hero_about_area {
+                    p.hero_section_bio {
+                        margin-top: 1rem;
+                    }
+                }
             }
         }
     }
@@ -118,11 +128,11 @@ main {
             }
 
             .hero_info_area {
-                width: 100%;
-
-                .hero_title {
-                    font-size: $heading_4;
-                    line-height: 3rem;
+                .hero_about_area {
+                    h1.hero_title {
+                        font-size: $heading_4;
+                        line-height: 3rem;
+                    }
                 }
             }
         }
