--- a/styles/about.css
+++ b/styles/about.css
@@ -363,7 +363,117 @@ main section.section {
 main section.section:last-child {
   margin-bottom: 8rem;
 }
+main section.insta_section {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+main section.insta_section .insta_section_text_area {
+  text-align: center;
+}
+main section.insta_section .insta_section_text_area h1.insta_section_title {
+  font-size: 3.157rem;
+}
+main section.insta_section .insta_cards_area {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1.5rem;
+}
+main section.insta_section .insta_cards_area .insta_card {
+  border: 1px solid rgba(12, 23, 28, 0.0509803922);
+  border-radius: 1rem;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+main section.insta_section .insta_cards_area .insta_card:hover {
+  border: 1px solid rgba(51, 51, 51, 0.4745098039);
+}
+main section.insta_section .insta_cards_area .insta_card:hover > .insta_img_area .insta_img {
+  opacity: 80%;
+}
+main section.insta_section .insta_cards_area .insta_card:hover > .insta_img_area .insta_btn_link_text {
+  opacity: 1;
+  transform: translate(-50%, -50%);
+}
+main section.insta_section .insta_cards_area .insta_card .insta_profile_info_area {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  color: #0c171c;
+  padding: 1rem 1.5rem;
+}
+main section.insta_section .insta_cards_area .insta_card .insta_profile_info_area .insta_profile_pic {
+  height: 40px;
+  width: 40px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: middle;
+     object-position: middle;
+  border-radius: 100%;
+}
+main section.insta_section .insta_cards_area .insta_card .insta_profile_info_area .insta_profile_info h1.insta_username {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+}
+main section.insta_section .insta_cards_area .insta_card .insta_profile_info_area .insta_profile_info p.insta_post_date {
+  font-size: 12px;
+  color: rgba(12, 23, 28, 0.2509803922);
+}
+main section.insta_section .insta_cards_area .insta_card .insta_img_area {
+  height: 35vh;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  background-color: #0c171c;
+}
+main section.insta_section .insta_cards_area .insta_card .insta_img_area .insta_img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: all 0.2s ease-in-out;
+}
+main section.insta_section .insta_cards_area .insta_card .insta_img_area .insta_btn_link_text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -30%);
+  color: #fcffff;
+  font-size: 1rem;
+  font-family: "Open Sans", sans-serif;
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+}
+main section.insta_section .insta_cards_area .insta_card .insta_like_comment_area {
+  padding: 1rem 1.5rem;
+  display: flex;
+  gap: 1rem;
+}
+main section.insta_section .insta_cards_area .insta_card .insta_like_comment_area .interaction_count {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.2rem;
+  color: rgba(12, 23, 28, 0.7490196078);
+}
+main section.insta_section .insta_cards_area .insta_card .insta_like_comment_area .interaction_count .interaction_icon {
+  font-size: 1.5rem;
+}
+main section.insta_section .insta_cards_area .insta_card .insta_like_comment_area .interaction_count .count_text {
+  font-weight: 600;
+}
 
+@media screen and (max-width: 1170px) {
+  main section.insta_section .insta_cards_area {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 670px) {
+  main section.insta_section .insta_cards_area {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
 @media screen and (max-width: 980px) {
   .hero_container .hero_content_area .hero_image_area {
     grid-template-areas: "one two two" "three four five";
@@ -381,6 +491,9 @@ main section.section:last-child {
   main section.section:last-child {
     margin-bottom: 4rem;
   }
+  main section.insta_section .insta_section_text_area {
+    text-align: left;
+  }
 }
 @media screen and (max-width: 550px) {
   .hero_container .hero_content_area {
@@ -396,5 +509,16 @@ main section.section:last-child {
   }
   main section.section {
     margin: 4rem 2rem 0;
+  }
+  main section.insta_section .insta_section_text_area h1.insta_section_title {
+    font-size: 2.369rem;
+    line-height: 3rem;
+  }
+  main section.insta_section .insta_cards_area .insta_card .insta_profile_info_area {
+    padding: 0.6rem;
+    gap: 0.6rem;
+  }
+  main section.insta_section .insta_cards_area .insta_card .insta_like_comment_area {
+    padding: 0.6rem;
   }
 }/*# sourceMappingURL=about.css.map */
