--- a/styles/about.scss
+++ b/styles/about.scss
@@ -83,9 +83,139 @@ main {
             margin-bottom: 8rem;
         }
     }
+    section.insta_section {
+        display: flex;
+        flex-direction: column;
+        gap: 4rem;
+
+        .insta_section_text_area {
+            text-align: center;
+
+            h1.insta_section_title {
+                font-size: $heading_3;
+            }
+        }
+
+        .insta_cards_area {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 1.5rem;
+
+            .insta_card {
+                border: 1px solid $dark5;
+                border-radius: $border_radius;
+                overflow: hidden;
+                transition: all 0.2s ease-in-out;
+
+                &:hover {
+                    border: 1px solid #33333379;
+                }
+
+                &:hover > .insta_img_area .insta_img {
+                    opacity: 80%;
+                }
+
+                &:hover > .insta_img_area .insta_btn_link_text {
+                    opacity: 1;
+                    transform: translate(-50%, -50%);
+                }
+                .insta_profile_info_area {
+                    display: flex;
+                    align-items: center;
+                    gap: 1rem;
+                    color: $dark100;
+                    padding: 1rem 1.5rem;
+
+                    .insta_profile_pic {
+                        height: 40px;
+                        width: 40px;
+                        object-fit: cover;
+                        object-position: middle;
+                        border-radius: 100%;
+                    }
+
+                    .insta_profile_info {
+                        h1.insta_username {
+                            font-family: $paragraph_font;
+                            font-size: 1rem;
+                            font-weight: $semi_bold;
+                        }
+                        p.insta_post_date {
+                            font-size: 12px;
+                            color: $dark25;
+                        }
+                    }
+                }
+
+                .insta_img_area {
+                    height: 35vh;
+                    width: 100%;
+                    position: relative;
+                    overflow: hidden;
+                    background-color: $dark100;
+
+                    .insta_img {
+                        height: 100%;
+                        width: 100%;
+                        object-fit: cover;
+                        transition: all 0.2s ease-in-out;
+                    }
+                    .insta_btn_link_text {
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -30%);
+                        color: $color_white;
+                        font-size: $paragraph;
+                        font-family: $paragraph_font;
+                        opacity: 0;
+                        transition: all 0.2s ease-in-out;
+                    }
+                }
+
+                .insta_like_comment_area {
+                    padding: 1rem 1.5rem;
+                    display: flex;
+                    gap: 1rem;
+
+                    .interaction_count {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 0.2rem;
+                        color: $dark75;
+
+                        .interaction_icon {
+                            font-size: 1.5rem;
+                        }
+
+                        .count_text {
+                            font-weight: $semi_bold;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 //? RESPONSIVE DESIGN
+@media screen and (max-width: 1170px) {
+    main section.insta_section {
+        .insta_cards_area {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+}
+
+@media screen and (max-width: 670px) {
+    main section.insta_section {
+        .insta_cards_area {
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+}
+
 @include tablet {
     .hero_container {
         .hero_content_area {
@@ -111,6 +241,11 @@ main {
 
         &:last-child {
             margin-bottom: 4rem;
+        }
+    }
+    main section.insta_section {
+        .insta_section_text_area {
+            text-align: left;
         }
     }
 }
@@ -140,5 +275,25 @@ main {
 
     main section.section {
         margin: 4rem 2rem 0;
+    }
+
+    main section.insta_section {
+        .insta_section_text_area {
+            h1.insta_section_title {
+                font-size: $heading_4;
+                line-height: 3rem;
+            }
+        }
+        .insta_cards_area {
+            .insta_card {
+                .insta_profile_info_area {
+                    padding: 0.6rem;
+                    gap: 0.6rem;
+                }
+                .insta_like_comment_area {
+                    padding: 0.6rem;
+                }
+            }
+        }
     }
 }
