--- a/styles/contact.css
+++ b/styles/contact.css
@@ -296,10 +296,20 @@ footer.footer_area .social_container a.footer_social_link i.social_icons:hover {
     gap: 1rem;
   }
 }
+.sub_title {
+  font-size: 1rem;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  color: #ad50d2;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
 header {
   overflow: hidden;
   position: relative;
   height: 100vh;
+  height: 80vh;
 }
 header .hero_image {
   height: 100vh;
@@ -337,176 +347,151 @@ header .hero_text_container .hero_cta_area a {
   font-family: "Open Sans", sans-serif;
   border-radius: 10rem;
 }
-header .hero_text_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  padding: 1rem 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: #fcffff;
-  border-bottom: 1px solid #ad50d2;
-}
-header .hero_text_container .contact_info {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-}
-header .hero_text_container .contact_info a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  color: #ad50d2;
-}
-header .hero_text_container .contact_info a svg {
-  fill: #ad50d2;
-}
 
-main {
-  padding: 0rem 8rem;
+main section.section {
+  margin: 8rem 4rem 0;
 }
-main section.contact_info_area {
-  margin-top: 4rem;
-  text-align: center;
+main section.section:last-child {
+  margin-bottom: 8rem;
 }
-main section.contact_info_area h1 {
-  font-size: 4.209rem;
+main section.contact_section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
-main section.contact_info_area p {
-  width: 60%;
-  margin: 1rem auto;
+main section.contact_section .contact_section_right {
+  grid-column: span 2;
 }
-main section.contact_form_area form {
-  width: 70%;
-  margin: 6rem auto;
+main section.contact_section .contact_section_right h1.contact_section_title {
+  font-size: 3.157rem;
+  margin-bottom: 1rem;
 }
-main section.contact_form_area .input_group_area {
+main section.contact_section .contact_section_right form.contact_form {
+  margin-top: 2rem;
+}
+main section.contact_section .contact_section_right form.contact_form .contact_input_area {
   display: flex;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
+  margin-bottom: 1rem;
 }
-main section.contact_form_area .input_group_area .input_group {
+main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   justify-content: center;
+  align-items: flex-start;
+  gap: 0.5rem;
   width: 100%;
-  margin-bottom: 2rem;
 }
-main section.contact_form_area .input_group_area .input_group .error {
-  color: #fa402f;
-}
-main section.contact_form_area .input_group_area .input_group label {
-  font-family: "Open Sans", sans-serif;
-  color: #0c171c;
-}
-main section.contact_form_area .input_group_area .input_group label.error {
-  color: #fa402f;
-}
-main section.contact_form_area .input_group_area .input_group input,
-main section.contact_form_area .input_group_area .input_group select,
-main section.contact_form_area .input_group_area .input_group textarea {
-  outline: none;
-  width: 100%;
-  height: 2.5rem;
-  margin-top: 0.5rem;
-  padding: 0.5rem;
+main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box label.contact_label {
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
-  border-radius: 1rem;
-  background-color: rgba(12, 23, 28, 0.0509803922);
-  border: 2px solid rgba(12, 23, 28, 0.1019607843);
 }
-main section.contact_form_area .input_group_area .input_group textarea {
-  height: 8rem;
+main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box input.contact_input,
+main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box select.select_contact_input,
+main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box textarea.input_message {
+  padding: 0.5rem 1rem;
   width: 100%;
-  resize: vertical;
-  max-height: 10rem;
-  min-height: 3rem;
-}
-main section.contact_form_area button.btn {
-  cursor: pointer;
-  gap: 1rem;
-  width: 100%;
-  margin-top: 2rem;
-  border: none;
   outline: none;
+  border: 1px solid rgba(12, 23, 28, 0.2509803922);
+  border-radius: 1rem;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1rem;
+  transition: all 0.2s ease-in-out;
 }
-main section.contact_form_area button.btn.disabled {
-  cursor: not-allowed;
-  opacity: 50%;
+main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box input.contact_input:active, main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box input.contact_input:focus,
+main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box select.select_contact_input:active,
+main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box select.select_contact_input:focus,
+main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box textarea.input_message:active,
+main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box textarea.input_message:focus {
+  border: 1px solid rgba(12, 23, 28, 0.7490196078);
 }
-main section.contact_form_area button.btn:hover svg {
-  transform: translate(5px);
+main section.contact_section .contact_section_right form.contact_form .contact_input_area .contact_input_box textarea.input_message {
+  min-width: 100%;
+  max-width: 100%;
+  min-height: 20vh;
 }
-main section.contact_form_area button.btn svg {
-  height: 1rem;
-  transition: all 0.3s ease-in-out;
-  fill: #fcffff;
+main section.contact_section .contact_section_right form.contact_form button.contact_form_submit_btn {
+  margin-top: 1rem;
+  background-color: #ad50d2;
+  padding: 0.6rem 2rem;
+  border-radius: 10rem;
+  font-family: "Open Sans", sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #fcffff;
+  font-weight: 500;
+  transition: all 0.2s ease-in-out;
+  border: 1px solid #ad50d2;
+  cursor: pointer;
+}
+main section.contact_section .contact_section_right form.contact_form button.contact_form_submit_btn:hover {
+  background: rgba(173, 80, 210, 0.2431372549);
+  color: #ad50d2;
 }
 
 @media screen and (max-width: 980px) {
-  main {
-    padding: 0rem 4rem;
+  .hero_container .hero_text_container {
+    padding: 0 4rem;
   }
-  main section.contact_info_area h1 {
-    font-size: 4.209rem;
+  .hero_container .hero_text_container .hero_title_text {
+    font-size: 3.157rem;
   }
-  main section.contact_info_area p {
-    font-size: 1rem;
-    width: 100%;
-    margin: auto;
+  .hero_container .hero_text_container .hero_body_text {
+    padding-right: 0.5rem;
+    width: 90%;
   }
-  main section.contact_form_area form {
-    width: 100%;
-    margin: 2rem auto;
+  main section.section {
+    margin: 4rem 4rem 0;
   }
-  main section.contact_form_area form .input_group_area .input_group label p {
-    font-size: 1rem;
+  main section.section:last-child {
+    margin-bottom: 4rem;
   }
-  main section.contact_form_area form .input_group_area .input_group input,
-  main section.contact_form_area form .input_group_area .input_group select,
-  main section.contact_form_area form .input_group_area .input_group textarea {
-    font-size: 1rem;
+  main section.contact_section {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  main section.contact_section .contact_section_right {
+    grid-column: span 3;
+  }
+  main section.contact_section .contact_section_right h1.contact_section_title {
+    line-height: 3.5rem;
+  }
+  main section.contact_section .contact_section_right form.contact_form .contact_select {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 780px) {
+  main section.contact_section {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  main section.contact_section .contact_section_right h1.contact_section_title {
+    line-height: 3.5rem;
+  }
+  main section.contact_section .contact_section_right form.contact_form .contact_select {
+    flex-direction: column;
   }
 }
 @media screen and (max-width: 550px) {
-  header .hero_text_container .contact_info a svg {
-    height: 0.7rem;
+  .hero_container .hero_text_container {
+    padding: 0 2rem;
   }
-  header .hero_text_container .contact_info a p {
-    font-size: 1rem;
+  .hero_container .hero_text_container .hero_title_text {
+    font-size: 2.369rem;
   }
-  main {
-    padding: 0rem 2rem;
+  .hero_container .hero_text_container .hero_body_text {
+    width: 100%;
   }
-  main section.contact_info_area {
-    text-align: left;
+  main section.section {
+    margin: 4rem 2rem 0;
   }
-  main section.contact_info_area h1 {
-    font-size: 3.157rem;
+  main section.contact_section {
+    grid-template-columns: repeat(1, 1fr);
   }
-  main section.contact_form_area .input_group_area {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0rem;
+  main section.contact_section .contact_section_right h1.contact_section_title {
+    font-size: 2.369rem;
+    line-height: 3rem;
   }
-  main section.contact_form_area .input_group_area .input_group {
-    margin-bottom: 1rem;
-  }
-  main section.contact_form_area .input_group_area textarea {
-    height: 5rem !important;
-    max-height: 8rem;
-    min-height: 3rem;
-  }
-  main section.contact_form_area button.btn {
-    font-size: 1rem;
+  main section.contact_section .contact_section_right form.contact_form .contact_input_area {
+    flex-direction: column;
   }
 }/*# sourceMappingURL=contact.css.map */
