--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -296,8 +296,16 @@ footer.footer_area .social_container a.footer_social_link i.social_icons:hover {
     gap: 1rem;
   }
 }
+.sub_title {
+  font-size: 1rem;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  color: #ad50d2;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
 header {
-  height: 100vh;
   overflow: hidden;
   position: relative;
   height: 100vh;
@@ -339,62 +347,37 @@ header .hero_text_container .hero_cta_area a {
   border-radius: 10rem;
 }
 
-header .hero_text_container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  width: 100%;
-  color: #fcffff;
-}
-header .hero_text_container h1 {
-  font-size: 5.61rem;
-}
-header .hero_text_container h3 {
-  font-size: 3.157rem;
-}
-
-.filter_links_container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 80%;
-  margin: 8rem auto 4rem auto;
-  padding: 0rem 8rem;
-}
-
 main section.section {
-  margin: 8rem 8rem 0;
+  margin: 8rem 4rem 0;
 }
-main section:last-child {
+main section.section section:last-child {
   margin-bottom: 8rem;
 }
-main section.fashion_pics h1.section_title {
-  margin-bottom: 2rem !important;
-  font-size: 2.369rem;
+main section.portfolio_section h1.portfolio_section_title {
+  font-size: 3.157rem;
 }
-main section.fashion_pics .gallery {
+main section.portfolio_section .gallery {
   -moz-columns: 3 20rem;
        columns: 3 20rem;
+  margin-top: 2rem;
+  margin-bottom: 8rem;
 }
-main section.fashion_pics .gallery .img_container {
+main section.portfolio_section .gallery .img_container {
   height: 100%;
+  width: 100%;
   overflow: hidden;
   position: relative;
   cursor: pointer;
   margin-bottom: 0.8rem;
 }
-main section.fashion_pics .gallery .img_container img {
+main section.portfolio_section .gallery .img_container img.gallery_image {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: 50% 0%;
-     object-position: 50% 0%;
-}
-main section.fashion_pics .gallery .img_container img:hover {
-  filter: brightness(-1);
+  -o-object-position: top;
+     object-position: top;
+  border-radius: 1rem;
 }
 
 #lightBox {
@@ -405,7 +388,10 @@ main section.fashion_pics .gallery .img_container img:hover {
   width: 100%;
   z-index: 10000;
   background: rgba(12, 23, 28, 0.7490196078);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
   display: none;
+  transition: all 0.4s ease-in-out;
 }
 #lightBox .ld_img {
   height: 600px;
@@ -433,24 +419,31 @@ main section.fashion_pics .gallery .img_container img:hover {
 .lightbox_control {
   position: fixed;
   width: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 0 8rem;
+  top: 0%;
+  left: 0%;
   z-index: 100001;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4rem 0rem;
   display: none;
 }
-.lightbox_control .control_btn {
-  padding: 1rem;
+.lightbox_control .control_icon {
+  color: #fcffff;
+  font-size: 2.369rem;
   cursor: pointer;
 }
-.lightbox_control .control_btn svg {
-  height: 8rem;
-  width: 2rem;
+.lightbox_control .close_btn {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.lightbox_control .control_btn svg path {
-  padding: 2rem;
-  fill: #fcffff;
+.lightbox_control .prev_next_btn {
+  display: flex;
+  gap: 4rem;
 }
 
 .lightbox_control.active_control {
@@ -459,63 +452,57 @@ main section.fashion_pics .gallery .img_container img:hover {
   align-items: center;
 }
 
-@media screen and (max-width: 900px) {
-  section.fashion_pics .gallery {
-    grid-template-columns: repeat(2, 1fr) !important;
-  }
-  #lightBox .ld_img {
-    height: 500px;
-  }
-  .lightbox_control {
-    padding: 0rem 4rem;
-  }
-  .lightbox_control .control_btn {
-    background-color: rgba(12, 23, 28, 0.2509803922);
-    border-radius: 1rem;
-  }
-}
 @media screen and (max-width: 980px) {
-  header .hero_text_container h1 {
+  .hero_container .hero_text_container {
+    padding: 0 4rem;
+  }
+  .hero_container .hero_text_container .hero_title_text {
     font-size: 3.157rem;
   }
-  section.section {
-    margin: 4rem 4rem 0 !important;
+  .hero_container .hero_text_container .hero_body_text {
+    padding-right: 0.5rem;
+    width: 90%;
   }
-  section:last-child {
-    margin-bottom: 4rem !important;
+  main section.section {
+    margin: 4rem 4rem 0;
+  }
+  main section.section:last-child {
+    margin-bottom: 4rem;
+  }
+  section.portfolio_section .gallery {
+    grid-template-columns: repeat(2, 1fr);
   }
   #lightBox .ld_img {
     height: 500px;
   }
   .lightbox_control {
-    padding: 0rem 1rem;
+    padding: 4rem 0rem;
+  }
+  .lightbox_control .control_btn {
+    border-radius: 100%;
   }
 }
 @media screen and (max-width: 550px) {
-  header .hero_text_container h1 {
-    font-size: 3.157rem;
+  .hero_container .hero_text_container {
+    padding: 0 2rem;
   }
-  header .hero_text_container p {
-    font-size: 1rem;
+  .hero_container .hero_text_container .hero_title_text {
+    font-size: 2.369rem;
   }
-  section.section {
-    margin: 4rem 2rem 0 !important;
+  .hero_container .hero_text_container .hero_body_text {
+    width: 100%;
   }
-  section:last-child {
-    margin-bottom: 4rem !important;
+  main section.section {
+    margin: 4rem 2rem 0;
   }
   section.fashion_pics .gallery {
-    grid-template-columns: repeat(1, 1fr) !important;
+    grid-template-columns: repeat(1, 1fr);
   }
   #lightBox .ld_img {
     height: auto;
-    width: 100%;
+    width: 90%;
   }
   .lightbox_control {
-    padding: 0rem 0rem;
-  }
-  .lightbox_control .control_btn svg {
-    height: 4rem;
-    width: 1.5rem;
+    padding: 4rem 0rem;
   }
 }/*# sourceMappingURL=portfolio.css.map */
