about page added section animation

--- a/styles/about.css
+++ b/styles/about.css
@@ -359,6 +359,13 @@ header .hero_content_area .hero_info_area .hero_about_area p.hero_section_bio {
   line-height: 1.5rem;
 }
 
+main section.section_hidden {
+  opacity: 0;
+  transform: translateY(1rem);
+}
+main section.area {
+  transition: all 0.5s ease-in;
+}
 main section.section {
   margin: 8rem 4rem 0;
 }
